--- a/Release/aae.ini
+++ b/Release/aae.ini
@@ -2,17 +2,17 @@
 
 [main]
 
-;mame_rom_path = e:\mame104
-screenw = 1024
-screenh = 768
+;mame_rom_path = f:\mame\roms
+screenw =1920
+screenh =1080
 widescreen = 0
-windowed= 0
-force_vsync =1 
+windowed = 0
+force_vsync =0 
 doublebuffer = 1               ;Enable Duble buffering for a smoother display
-drawzero = 0
+drawzero =0
 
-linewidth = 1.5                ;#Linewidth for Vector Games
-pointsize = 1.0                ;#PointSize for Vector Games
+linewidth = 2.0                ;#Linewidth for Vector Games
+pointsize = 1.5                ;#PointSize for Vector Games
 gamma =127   
 bright =127 
 contrast =127                   
@@ -21,7 +21,7 @@ accumlevel = 0
 fire_point_size = 20           ;#ASTEROIDS AND ASTEROIDS DELUXE
 explode_point_size = 17        ;#ASTEROIDS AND ASTEROIDS DELUXE
 debug = 0
-kbleds = 1
+kbleds =1
 
 ;##### ARTWORK OPTIONS ############
 bezel  = 0
@@ -34,29 +34,6 @@ dotmask = 0                    #RASTER MONITOR SCREEN EFFECTS - (NOT FINISHED, S
 ;########### GAME SPECIFIC HACKS ################
 sstick = 1                     #Battlezone Single Stick Hack
 ;#########KEY CONFIGS##############
-
-kstart1 = 28
-kstart2 = 29
-kcoin1 = 32
-kcoin2 = 31
-
-kp1up = 84
-kp1down = 85
-kp1right = 83
-kp1left = 82
-kp1but1 = 117
-kp1but2 = 119
-kp1but3 = 75
-kp1but4 = 115
-
-kp2up = 9
-kp2down = 13
-kp2right = 12
-kp2left = 10
-kp2but1 = 4
-kp2but2 = 6
-kp2but3 = 7
-kp2but4 = 7
 
 kquit = 59              #Quit key, ESC by default
 kpause = 16             #Pause game key
@@ -88,24 +65,22 @@ pshiss =0
 hvnoise =0
 psnoise =0
 
-noisevol =4
-pokeyvol =18
-mainvol =15
+noisevol =19
+pokeyvol =19
+mainvol =18
 
 ###########################
 anisfilter = 0      #Enable  Filtering Disable for sharp textures
 prescale = 2        #Raster Prescale value
-priority =0
+priority =1
 snappng=0
-vectortrail=2
-vectorglow=8
-gain=25
-m_line=20
+vectorglow=9
+vectortrail=1
+gain=20
+m_line=22
 m_point=16
 monitor=0
 screenburn=0
-windowed=0
-widescreen=0
 
 
 [mouse]
