--- a/Release/video.ini
+++ b/Release/video.ini
@@ -1186,6 +1186,26 @@ bezcropx=-85
 bezcropy=-110
 overalpha=
 
+
+[mhavocpe]
+fullsx=-58
+fullsy=1105
+fullex=-122
+fulley=885
+bezelsx=130
+bezelsy=897
+bezelex=46
+bezeley=680
+cropsx=54
+cropsy=973
+cropex=-85
+cropey=751
+bezcropzoom=1.2
+bezcropx=-85
+bezcropy=-110
+overalpha=
+
+
 [alphaone]
 fullsx=1
 fullsy=1025
