--- a/AAE2024/AAE2024.vcxproj
+++ b/AAE2024/AAE2024.vcxproj
@@ -185,10 +185,9 @@
     <ClCompile Include="os_input.cpp" />
     <ClCompile Include="rand.cpp" />
     <ClCompile Include="sndhrdw\5220intf.cpp" />
+    <ClCompile Include="sndhrdw\aae_mame_pokey_2.4.cpp" />
     <ClCompile Include="sndhrdw\ay8910.cpp" />
     <ClCompile Include="sndhrdw\cinesnd.cpp" />
-    <ClCompile Include="sndhrdw\pokey.cpp" />
-    <ClCompile Include="sndhrdw\pokyintf.cpp" />
     <ClCompile Include="sndhrdw\samples.cpp" />
     <ClCompile Include="sndhrdw\SegaG80snd.cpp" />
     <ClCompile Include="sndhrdw\starwars_snd.cpp" />
@@ -278,9 +277,8 @@
     <ClInclude Include="rand.h" />
     <ClInclude Include="rotation_table.h" />
     <ClInclude Include="sndhrdw\5220intf.h" />
+    <ClInclude Include="sndhrdw\aae_mame_pokey_2.4.h" />
     <ClInclude Include="sndhrdw\ay8910.h" />
-    <ClInclude Include="sndhrdw\pokey.h" />
-    <ClInclude Include="sndhrdw\pokyintf.h" />
     <ClInclude Include="sndhrdw\samples.h" />
     <ClInclude Include="sndhrdw\segag80snd.h" />
     <ClInclude Include="sndhrdw\starwars_snd.h" />
