--- a/Release/video.ini
+++ b/Release/video.ini
@@ -657,7 +657,7 @@ bezcropy=
 overalpha=
 
 
-[vortex]
+[tvortex]
 fullsx=-60
 fullsy=1097
 fullex=-338
@@ -693,7 +693,27 @@ bezcropx=
 bezcropy=
 overalpha=
 
-[alienst]
+
+[vbrakout]
+fullsx=-93
+fullsy=1077
+fullex=-352
+fulley=1099
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+
+[aliensv]
 fullsx=-60
 fullsy=1097
 fullex=-338
