--- a/AAE2024/video.ini
+++ b/AAE2024/video.ini
@@ -657,7 +657,7 @@ bezcropy=
 overalpha=
 
 
-[vortex]
+[tvortex]
 fullsx=-60
 fullsy=1097
 fullex=-338
@@ -693,7 +693,7 @@ bezcropx=
 bezcropy=
 overalpha=
 
-[alienst]
+[aliensv]
 fullsx=-60
 fullsy=1097
 fullex=-338
